--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 JWT_SECRET=mySuperSecretKey123!
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=1234
+DB_NAME=db_itinera
+CORS_ORIGIN=http://localhost:19006
+NODE_ENV=development
