--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ DB_PASSWORD=1234
 DB_NAME=db_itinera
 CORS_ORIGIN=http://localhost:19006
 NODE_ENV=development
+DATABASE_URL='mysql://7gfjz2iks1g5rb6o3ftr:pscale_pw_...@aws.connect.psdb.cloud/db_itinera?ssl={"rejectUnauthorized":true}'
