--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ DB_PASSWORD=1234
 DB_NAME=db_itinera
 CORS_ORIGIN=http://localhost:19006
 NODE_ENV=development
-DATABASE_URL='mysql://7gfjz2iks1g5rb6o3ftr:pscale_pw_...@aws.connect.psdb.cloud/db_itinera?ssl={"rejectUnauthorized":true}'
+DATABASE_URL='mysql://ccsixt3e5b57zsbapggc:pscale_pw_C82znTBtH0oOScknLkmOUuLJ1Cxc91sRNYbl6S9cMId@aws.connect.psdb.cloud/db_itinera?ssl={"rejectUnauthorized":true}'
