--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ DB_PASSWORD=1234
 DB_NAME=db_itinera
 CORS_ORIGIN=http://localhost:19006
 NODE_ENV=development
-DATABASE_URL='mysql://ccsixt3e5b57zsbapggc:pscale_pw_C82znTBtH0oOScknLkmOUuLJ1Cxc91sRNYbl6S9cMId@aws.connect.psdb.cloud/db_itinera?ssl={"rejectUnauthorized":true}'
+DATABASE_URL='mysql://oc21qtrcw4ickzxi97pe:pscale_pw_Khuq1VDNHOc2GgHZIjOLBL5IuAy4aHCvQG6WMvu9cad@aws.connect.psdb.cloud/db_itinera?ssl={"rejectUnauthorized":true}'
