--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 JWT_SECRET=mySuperSecretKey123!
+# DB_HOST=localhost
+# DB_USER=root
+# DB_PASSWORD=1234
+# DB_NAME=db_itinera
+# CORS_ORIGIN=http://localhost:19006
+# NODE_ENV=development
+# DATABASE_URL='mysql://spoc7wdd2c27b3pjlzw7:pscale_pw_SrYqjxyZHyOmroRuigIiZk1Ce1VYT9TGXxj9Y47UTVE@aws.connect.psdb.cloud/db_itinera?ssl={"rejectUnauthorized":true}'
