--- a/.env
+++ b/.env
@@ -6,3 +6,7 @@ JWT_SECRET=mySuperSecretKey123!
 # CORS_ORIGIN=http://localhost:19006
 # NODE_ENV=development
 # DATABASE_URL='mysql://spoc7wdd2c27b3pjlzw7:pscale_pw_SrYqjxyZHyOmroRuigIiZk1Ce1VYT9TGXxj9Y47UTVE@aws.connect.psdb.cloud/db_itinera?ssl={"rejectUnauthorized":true}'
+
+
+EMAIL=itinera.team.app@gmail.com
+EMAIL_PASS=oury tiac ijdb bfdq
